# blackwell

./: .dockerignore  .env  .gitignore  AGENTS.md  CMakeLists.txt  CMakeLists.txt.bak  Dockerfile  Dockerfile.int4  Dockerfile.llama  HANDOFF.md  Q4_PLAN.md  README.md  REPORT.md  benchmark-results.md  context-research.md  context-scout.md  context.md  doc.md  docker-compose.yml  llama_analysis.md  progress.md  pyproject.toml  research.md  scout_report.md  start_servers.sh  test_tokenizer  test_tokenizer.cpp  wiki_corpus.txt
.pi/agents/: researcher.blackwell-researcher.md  researcher.session28-researcher.md  scout.blackwell-scout.md  scout.session28-scout.md
.ralph/: blackwell_max_throughput.md  blackwell_max_throughput.state.json
bench/: INDEX.md  PHASE_A_RESULTS.md  PHASE_B_RESULTS.md  PHASE_C_RESULTS.md  attention_prefill  attention_prefill.cu  bench_batched_gemv.cu  bench_check_attention  bench_check_attention.cu  bench_debug_attention  bench_debug_attention.cu  bench_flash_attention  bench_flash_attention.cu  bench_fused_unpack_pack.cu  bench_gemm_dp4a.cu  bench_gemv_fp4.cu  bench_gemv_fp8.cu  bench_int8_pipeline.cu  bench_minimal_attention  bench_minimal_attention.cu  bench_mixed_precision.cu  bench_packed_fp4.cu  bench_ppl.cu  bench_ppl_fp8.cu  bench_ppl_int4_8b.cu  bench_ppl_int8_fp32act.cu  bench_ppl_int8_fp32act_8b.cu  bench_ppl_int8_per_row.cu  bench_ppl_llama31_8b.cu  bench_ppl_llama32_1b.cu  bench_ppl_per_row_fast.cu  bench_warp_gemv.cu  convert_bf16_to_int8.py  convert_weights_int4.cu  convert_weights_int8.cu  convert_weights_packed_fp4.cu  cublas_gemv_bench  cublas_gemv_bench.cu  decode_autoregressive  decode_autoregressive.cu  (+119 more)
better-inference/: DESIGN.md  gguf.h  gguf_convert  gguf_convert.cpp  gguf_test  gguf_test.cpp
build_old_attempt/: CTestTestfile.cmake  cmake_install.cmake
cuda-libs/: libcudart.so.13.3.29
deploy/: README.md  blackwell.service  monitor.sh  nginx.conf
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FP8_KERNEL_PLAN.md  PREFILL_REFACTOR_PLAN.md  QUALITY.md
include/blackwell/: bpe_tokenizer.h  config.h  kernels.h
python/: blackwell_pybind.cpp
scripts/: Dockerfile.llama-bench  benchmark_suite.py  check_quality.py  copy_llama_docker.sh  export_bf16.py  extract_8b_norms.py  extract_fp16_layers.py  extract_norms.py  nvfp4_quantize.py  prepare_tokenizer.py  quantize_awq.py  quantize_awq_int4_8b.py  quantize_awq_llama31_8b.py  quantize_fp8.py  quantize_generic.py  quantize_int8_per_row.py  quantize_llama32_1b.py  quantize_per_row.py  quantize_per_row_06b.py  quantize_qwen35.py  smooth_quant.py  smooth_quant_8b.py  validate_full_pipeline.py
server/: http_server.py  http_subprocess  http_subprocess.cpp  inference_server  inference_server.cpp  inference_server.new  inference_server_9b  inference_server_cgraph  inference_server_cgraph.cu  inference_server_int4  inference_server_int4.cu  inference_server_int4_batched  inference_server_int4_batched.cu  inference_server_llama  inference_server_llama.cu  inference_server_nofp4.cu  inference_server_nofp4.cu.bugfix  inference_server_qwen35_9b.cu  prefill_server_int4.cu  server.py
src/kernels/: attention.cu  cuda_graphs.cu  decode.cu  fp16_scale_cache.cu  fused_decode.cu  fused_int4_ops.cu  fused_mlp.cu  fused_o_norm.cu  fused_pack_gemv.cu  fused_quant_attn_wo.cu  fused_residual_norm.cu  fused_residual_norm_int4.cu  fused_residual_norm_int4_asym.cu  fused_swiglu_gemv.cu  fused_swiglu_quant.cu  fused_swiglu_quant_int4.cu  fused_swiglu_quant_int4_asym.cu  fused_unpack_quant.cu  gated_delta_net.cu  gemm.cu  gemm_int8_mma.cu  gemm_int8_wmma.cu  gemm_int8_wmma_fast.cu  gemv_bf16.cu  gemv_fp16.cu  gemv_fp32.cu  gemv_fp32_int4_asym.cu  gemv_fp32_int5_asym.cu  gemv_fp4_nv.cu  gemv_fp8.cu  gemv_int4_asym_batched.cu  gemv_int4_batched.cu  gemv_int4_qkv.cu  gemv_int8.cu  gemv_int8_fp16sc.cu  gemv_int8_gate_up.cu  gemv_int8_pdl.cu  gemv_int8_per_row.cu  gemv_int8_qkv.cu  gemv_int8_unrolled.cu  (+10 more)
tests/: test_attention.cu  test_gemm.cu  test_memory.cu  test_norm.cu
tools/: extract_weights  extract_weights.cpp
weights/: 0_self_attn.k_proj.fp4  0_self_attn.v_proj.fp4  1_self_attn.k_proj.fp4  1_self_attn.v_proj.fp4  2_self_attn.k_proj.fp4  2_self_attn.v_proj.fp4  3_self_attn.k_proj.fp4  3_self_attn.v_proj.fp4
